@@ -67,6 +67,9 @@ module ShopifyApp
         end
       end
 
+      def mount_engine
+        route "mount ShopifyApp::Engine, at: '/'"
+      end
 
       private
 
